# dsdk

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  buster.dockerfile  docker-compose.lint.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  dockerfile  freetds.conf  license.txt  pyproject.toml  readme.md  setup.cfg  setup.py  timescaledb.dockerfile  tox.ini
.github/workflows/: codeql.yml  docker.yml  lint.yml  publish.yml  release.yml  test.yml
asset/postgres/epic/notifications/: insert.sql
asset/postgres/predictions/: recover.sql
assets/postgres/: extant.sql  schema.sql
assets/postgres/epic/errors/: insert.sql
assets/postgres/epic/notifications/: channel.sql  insert.sql  recent.sql  recover.sql
assets/postgres/epic/notifications/errors/: insert.sql
assets/postgres/epic/verifications/: insert.sql
assets/postgres/epic/verifications/errors/: insert.sql
assets/postgres/flowsheets/: insert.sql  missing.sql
assets/postgres/flowsheets/errors/: insert.sql
assets/postgres/predictions/: listen.sql  recent.sql  recover.sql
ci/: bootstrap.py  requirements.txt
docs/: conf.py  installation.rst  requirements.txt  usage.rst
docs/reference/: dsdk.rst  index.rst
local/: .gitignore  configuration.yaml  docker.env  epic.yaml  notifier.yaml  test.model.yaml  test.yaml  verifier.yaml
postgres/: docker-entrypoint.sh  dockerfile
postgres/sql/: 004.migrate.sql  create.sql  migrate.sql
postgres/sql/initdb.d/: 003.create.sql
postgres/sql/patchdb.d/: 004.patch.sql  005.public.sql  006.private.sql  007.epic.sql
secrets/: .gitignore  docker.env  example.env  example.notifier.env  example.verifier.env
sql/postgres/: create.sql  extant.sql  migrate.sql  schema.sql
sql/postgres/predictions/: gold.sql  insert.sql
sql/postgres/runs/: close.sql  open.sql
src/dsdk/: __init__.py  asset.py  dependency.py  env.py  epic.py  flowsheet.py  interconnect.py  interval.py  model.py  mongo.py  mssql.py  persistor.py  postgres.py  profile.py  service.py  utils.py
test/: .gitignore  0.0.1.pkl  conftest.py  flowsheets.data.not.saved.yaml  flowsheets.invalid.csn.yaml  flowsheets.invalid.empi.yaml  flowsheets.valid.yaml  model.pkl  test_cache.py  test_dsdk.py  test_flowsheets.py  test_import.py  test_interval.py  test_mixin.py  test_model.py  test_mssql.py  test_postgres.py  test_time_conversions.py  test_union_all.py  test_utc_now_times.py
tests/: test_dsdk.py
