[build-system]
requires = [
    "pip>=22.0.4",
    "setuptools>=61.2.0",
    "setuptools_scm[toml]>=6.4.2",
    "wheel>=0.37.1",
]

[project]
authors = [
    { name = "Jason Lubken", email = "jlubken@users.noreply.github.com" },
    { name = "Michael Becker", email = "mdbecker@users.noreply.github.com" },
    { name = "Corey Chivers", email = "cjbayesian@user.noreply.github.com" },
    { name = "Penn Signals", email = "pennsignals@pennmedicine.upenn.edu" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]
description = "An opinionated library to help deploy data science projects"
dynamic = ["dependencies", "version"]
name = "dsdk"
requires-python = ">=3.7.4"
readme = "readme.md"

[tool.black]
line-length = 79
target-version = ["py37","py38","py39","py310"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError()",
    "pragma: nocover",
    "if __name__ == .__main__.:",
]
precision = 2
show_missing = true

[tool.coverage.run]
branch = true
parallel = true

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
known_first_party = ["dsdk"]
default_section = "THIRDPARTY"

[tool.pylint.basic]
good-names = '''a,b,c,d,df,do_POST,e,i,id,logger,n,on,ok,tz'''

[tool.pylint.message_control]
disable = '''duplicate-code,C0330'''
extension-pkg-allow-list = [
  "pymssql._mssql",
]

[tool.pylint.miscellaneous]
notes = '''FIXME,XXX'''

[tool.pylint.similarities]
min-similarity-lines = 4
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"

[tool.pytest.ini_options]
addopts = "-ra --cov=dsdk --cov-report=term-missing --strict-markers --ignore=.eggs --tb=short"
testpaths = ["test"]
norecursedirs = ".env .git .venv build dist"
python_files = "test.py tests.py test_*.py *_test.py"

[tool.setuptools_scm]
local_scheme = "dirty-tag"
