[bdist_wheel]
universal = 1

[options]
tests_require = pytest

[aliases]
test = pytest


[flake8]
max-complexity = 10
max-line-length = 79
ignore = C812,C815,C816,C819,D202,D401,E203,W503


[matrix]
python_versions =
    3.7
    3.8
coverage_flags =
    cover: true
    nocover: false


[metadata]
author = Michael Becker, Jason Lubken, Corey Chivers
author_email = pennsignals@pennmedicine.upenn.edu
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities",
description = An opinionated library to help deploy data science projects
long_description = file: readme.md
long_descritpion_content_type = text/markdown
name = dsdk
project_urls =
    Issue Tracker = https://github.com/pennsignals/dsdk/issues
url = https://github.com/pennsignals/dsdk


[mypy]
follow_imports = normal
ignore_missing_imports = True
