[bdist_wheel]
python-tag=py37.py38.py39.py310

[options]
tests_require = pytest
zip_safe = false

[flake8]
max-complexity = 10
max-line-length = 79
ignore = C812,C815,C816,C819,D202,D401,E203,W503

[matrix]
python_versions =
    3.7
    3.8
    3.9
    3.10
coverage_flags =
    cover: true
    nocover: false

[mypy]
follow_imports = normal
ignore_missing_imports = True